<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    tools:context=".activity.NewScheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitleSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_border_title_new_schedule"
            android:hint="@string/insert_title"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_border_edit_text_new_schedule"
            android:hint="@string/insert_description"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="25dp" />

        <Button
            android:id="@+id/buttonAddContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_contacts_button"
            android:onClick="popSelectContactsFragment"
            android:backgroundTint="@color/orange1"
            />

        <TextView
            android:id="@+id/textViewShowNumberAddedContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/added_contacts"
            android:textAlignment="center"
            style="@android:style/Widget.EditText"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_border_edit_text_new_schedule"
                android:hint="@string/write_a_message"
                android:paddingBottom="50dp"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:onClick="popCalendarView"
                android:drawableLeft="@android:drawable/ic_menu_today"
                android:text="@string/add_date_button"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/textViewShowDateSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_date_selected"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSelectHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:onClick="popTimePicker"
                android:drawableLeft="@drawable/clock"
                android:textSize="15dp"
                android:text="@string/add_hour_button" />

            <TextView
                android:id="@+id/textViewShowTimeSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_time_selected"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/buttonCompleteSchedulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:onClick="popCompletedMessage"
            android:backgroundTint="@color/teal_700"
            android:text="@string/create_schedulation_button" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>